  * Some bug fixes
 
________________________________________________________________________________
VERSION 0.2.1

  * Login procedure has been updated
  * Some minor optimizations
  
________________________________________________________________________________
VERSION 0.2.2

  * Bugfix: It was not possible to send an inital message to a contact
  
________________________________________________________________________________
VERSION 0.2.3

  * NEW FEATURE: Added mp3 soundfile support for MIDP2 build. (Only if your device can play mp3)
  * NEW FEATURE: Added vibrator support for MIDP2 build.
  * NEW FEATURE: Current online status can be seen in main menu when online
  * NEW FEATURE: Contact list can be shown even if offline
  * NEW FEATURE: Supports sending of Type 2 messages
  * Bugfix: City field is now taken into account which searching
  * Before removing a contact form the list the user is asked if he really wants to
  * Sending a message now leads to the chat history not to the contact list
  * Added Hebrew translation
  * Added back button to the status selet screen
  
________________________________________________________________________________
VERSION 0.3.0

  * NEW FEATURE: File transfer to other > ICQ v8 clients (MIDP2 version only)
  * NEW FEATURE: New chat history added
  * NEW FEATURE: Group display support
  * Quick adding temporary contact to contact list
  * Switching between chats with "left" and "right" buttons
  * There is now a new "Signaling" menu in options for sound settings
  * You can now set the sound volume for online and message sounds
  * General sound format support but only wav-files (PCM) will be in the release
  * New option "Small font in chat"
  * Search results are now drawn with DrawTools (like the new chat history)
  * Many minor bugfixes

 ________________________________________________________________________________
VERSION 0.3.1

  * Bugfix: Time display on message timestamp was not correct